# idiotc

./: CMakeLists.txt
src/: main.c  resource.h  resource.rc
